Add filter payment by status